--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   mockito: ^5.0.16
   equatable: ^2.0.3
   uuid: ^3.0.5
+  json_serializable: ^6.0.1
+  json_annotation: ^4.3.0
+  simple_logger: ^1.8.1+1
 
 dev_dependencies:
   flutter_test:
