--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   json_serializable: ^6.0.1
   json_annotation: ^4.3.0
   simple_logger: ^1.8.1+1
+  copy_with_extension: ^2.0.2
+  bloc: ^7.2.1
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +27,7 @@ dev_dependencies:
   faker: ^2.0.0
   flutter_lints: ^1.0.0
   test:
+  copy_with_extension_gen: ^2.0.2
 
 flutter:
   uses-material-design: true
