--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   simple_logger: ^1.8.1+1
   copy_with_extension: ^2.0.2
   bloc: ^7.2.1
+  responsive_ui_layout: ^0.0.1
+  flutter_svg: ^0.23.0+1
+  auto_route: ^3.1.3
+  get_it: ^7.2.0
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,13 +33,13 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   test:
   copy_with_extension_gen: ^2.0.2
+  auto_route_generator: ^3.1.0
 
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
