--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
   test:
   copy_with_extension_gen: ^2.0.2
   auto_route_generator: ^3.1.0
+  intl: ^0.17.0
 
 flutter:
   uses-material-design: true
