--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dev_dependencies:
   copy_with_extension_gen: ^2.0.2
   auto_route_generator: ^3.1.0
   intl: ^0.17.0
+  pdf: ^3.6.2
+  printing: ^5.6.2
+  path_provider: ^2.0.7
 
 flutter:
   uses-material-design: true
